Fix navbar on mobile (resize on open). Added contact us page.

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -46,6 +46,20 @@ h2, h3, h4 {
   border-radius: 0;
 }
 
+#contact-us{
+  .navbar {
+    .navbar-brand {
+      img {
+        width: 40px;
+      }
+    }
+  }
+
+  .contact-list {
+    list-style-type: none;
+  }
+}
+
 #hero {
   border-bottom: 80px solid $color-gray;
   background: image_url('CAMC-1.jpeg');
@@ -62,6 +76,7 @@ h2, h3, h4 {
     height: 100%;
   }
   .navbar {
+    top: 0;
     .navbar-brand {
       img {
         width: 40px;
